Final preparations for read-only configuration. Refs #17836.